<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="acrossAppLoginPageVM" type="com.acrossassistattendance.app.modules.acrossapploginpage.data.viewmodel.AcrossAppLoginPageVM"/>
    </data>
    <LinearLayout android:id="@+id/linearAcrossApplogi"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageAalogohorizon"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_52pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_99pxv"
            android:layout_width="@dimen/_249pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_aalogohorizon}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_aalogohorizon"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEmployeesAtten"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtEmployeesAtten}"
            style="@style/txtRobotoromanbold22" tools:text="@string/msg_employees_atten"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLogintoyoura"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtLogintoyoura}"
            style="@style/txtRobotoromanmedium20" tools:text="@string/msg_login_to_your_a"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEmployeeID"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_104pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtEmployeeID}"
            style="@style/txtRobotoromanmedium11" tools:text="@string/lbl_employee_id"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_72_radius_5"
            android:ellipsize="end" android:id="@+id/etRectangleNine"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@={acrossAppLoginPageVM.acrossAppLoginPageModel.etRectangleNineValue}"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtPassword}"
            style="@style/txtRobotoromanmedium11" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_600_72_radius_5"
            android:ellipsize="end" android:id="@+id/etRectangleTen"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@={acrossAppLoginPageVM.acrossAppLoginPageModel.etRectangleTenValue}"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:buttonTint="@color/gray_600_70"
            android:ellipsize="end" android:fontFamily="@font/roboto"
            android:id="@+id/checkBoxRememberMe"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingStart="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@string/lbl_remember_me"
            android:textColor="@color/bluegray_900_dd"
            android:textFontWeight="600"
            android:textSize="@dimen/_11pxh" android:textStyle="bold" tools:text="@string/lbl_remember_me"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogIn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_log_in"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_log_in"/>
        <View android:background="@color/bluegray_100"
            android:id="@+id/lineVectorThree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_55pxv" android:layout_width="@dimen/_391pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_50pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtConfirmation}"
            style="@style/txtRobotoromanmedium12" tools:text="@string/msg_don_t_have_an_a"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPleasecontact"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_120pxh"
            android:layout_marginStart="@dimen/_120pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{acrossAppLoginPageVM.acrossAppLoginPageModel.txtPleasecontact}"
            style="@style/txtRobotoromanmedium12_1" tools:text="@string/msg_please_contact"/>
    </LinearLayout>
</layout>
